# xfce4-panel-dunst

./: .gitignore  PKGBUILD  Readme.md  meson.build  meson_options.txt  xfce4-panel-dunst.avprj
data/panel-plugins/: dunst.desktop
meson_scripts/: git_revision.sh  version.sh
po/: POTFILES.in  xfce4-panel-dunst.pot
src/: Config.vala.base  dbus.vala  dunst.deps  dunst.pc  dunst.vala  main.vala  meson.build  plugin.vala
src/plugin/: dunst.vala  meson.build
src/widget/: Config.vala.base  dbus.vala  meson.build  widget.vala
